2005-09-28 19:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridThisNodeCanBeModifiedInThisPhase) static
	helper method for gridSmooth to implement phase aspect.
	* src/gridcad.c (gridSmooth) queries
	gridThisNodeCanBeModifiedInThisPhase to implement phase aspect.
	* src/gridinsert.c (gridThisEdgeCanBeModifiedInThisPhase) static
	helper method for gridAdapt to implement phase aspect.
	* src/gridinsert.c (gridAdapt) queries
	gridThisEdgeCanBeModifiedInThisPhase to implement phase aspect.
	* src/gridswap.c (gridSwapEdge) queries gridPhase to implement
	volume phase aspect

2005-09-28 09:02 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridPhase,gridSetPhase) added to control grid
	adaptation phases (i.e. all, edge only, faces only, and volume
	only).

2005-09-27 19:06 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatioRange) compute longest and
	shortest edge in metric to find range.	
	* src/unit_main.c (STATUS) include edge range in condensed status
	message.

2005-09-26 09:31 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (leading_edge_spacing) modified to add a
	boundary layer near nose with a geomtric growth rate of 1.2 from
	-le initial cell hight.

2005-09-25 20:33 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) put old length based adaptation -e again.

2005-09-25 20:04 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (leading_edge_spacing) extracted the spacing
	function to apply it often (every STATUS).

2005-09-15 10:20 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) refactored the path (currently
	disabled) that uses a plan to make a final sweep after adaptation
	that splits interior grid edges that have both nodes on a boundary
	element. This procedure leads to provable boundary projection.

2005-09-14 13:35 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added a block of code to split edges that
	connect two boundary nodes without being on the boundary. These