@@ -1,3 +1,7 @@
+2005-09-29 15:46 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c (main) incorporated gridPhase as -p #
+
 2005-09-28 19:35 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridThisNodeCanBeModifiedInThisPhase) static
